refactor: use more java 17 features
Co-authored-by: AI Coding Agent <ai@invalid.invalid>
Co-authored-by: Lennart Rosam <rosam@sipgate.de>
Co-authored-by: Torsten Will <will@sipgate.de>